gl51-master/src/test/deca/context/invalid/test_rule3_33Mod.deca
//Description
//On doit faire des modulo entre entiers

{
    float a = 0.0f;
    int b = 2;
    b = a % b;  //error car par int int
    //PASSED
}